Revision history for Red

{{$NEXT}}

0.1.23  2020-07-22T21:20:24+01:00
    - Fix bind order on update

0.1.22  2020-07-22T17:49:46+01:00
    - Fix created obj's Poxy
    - fix new-from-data from retuning data
    - Add -- and ++ prefix and postfix

0.1.21  2020-07-21T01:15:24+01:00
    - Add experimental short name for tables

0.1.20  2020-07-21T00:43:15+01:00
    - Add experimental feature for format table name

0.1.19  2020-07-20T18:01:10+01:00
    - Fix bug on setting type of a column

0.1.18  2020-07-17T20:25:01+01:00
    - Set unique fields by group

0.1.17  2020-07-16T01:15:11+01:00
    - custom join ,create
    - custom join from defined model

0.1.16  2020-07-11T17:54:39+01:00
    - Add sentences test
    - Fix undefined model .^rs bug
    - Fix 2 joins same table bug

0.1.15  2020-07-09T17:23:42+01:00
    - Add varchar as possible type

0.1.14  2020-07-07T22:33:33+01:00
    - fix time tracker example

0.1.13  2020-06-30T01:04:41+01:00
    - Create Red::Cli

0.1.12  2020-06-29T02:52:51+01:00
    - prepare-database on red CLI

0.1.11  2020-06-29T02:24:29+01:00
    - Add prepare-database do red CLI
    - Add .^populate to Metaclass

0.1.10  2020-06-28T14:47:41+01:00
    - rename ResultSeq.join to ResultSeq.join-model
    - create ResultSeq.join to mimic Positional.join

0.1.9  2020-06-23T15:38:43+01:00
    - SQLite error changing number

0.1.8  2020-06-19T00:26:56+01:00
    - Fix update

0.1.7  2020-06-06T22:00:32+01:00
    - Fix #424
    - Add is-handling experimental feature

0.1.6  2020-04-10T19:25:12+01:00
    - Add option `:no-prefetch` to relationship
    - Auto prefetches to-one relationships

0.1.5  2020-01-13T00:05:12Z
    - create Red::Schema class
    - change tests to use Red::Schema class where needed

0.1.4  2020-01-02T23:56:28Z
    - fix `.^create-table: :if-not-exists`

0.1.3  2019-12-31T22:17:46Z
    - fix README example

0.1.2  2019-12-31T21:38:09Z
    - fallback to original map/grep when printing