@@ -1,7 +1,7 @@
 use Test;
 use Red;
 
-plan 32;
+plan 34;
 
 my $*RED-DEBUG          = $_ with %*ENV<RED_DEBUG>;
 my $*RED-DEBUG-RESPONSE = $_ with %*ENV<RED_DEBUG_RESPONSE>;
@@ -53,6 +53,7 @@ role TestPhasersRole {
 model TestPhasers does TestPhasersRole {
     has Int $.id is serial;
     has Str $.name is column is rw;
+    has Int $.int  is column is rw = 0;
 
     method before-create-model-public() is before-create {
         %call-count{ &?ROUTINE.name }++;
@@ -60,8 +61,9 @@ model TestPhasers does TestPhasersRole {
     method after-create-model-public() is after-create {
         %call-count{ &?ROUTINE.name }++;
     }
-    method before-update-model-public() is before-update {
+    method before-update-model-public($_) is before-update {
         %call-count{ &?ROUTINE.name }++;
+        .int++
     }
     method after-update-model-public() is after-update {
         %call-count{ &?ROUTINE.name }++;
@@ -120,6 +122,10 @@ call-count-ok 'delete';
 $test-row = TestPhasers.new(name => "test two");
 $test-row.^save(:insert);
 call-count-ok 'create', 2, msg => "when using ^save(:insert)";
+
+TestPhasers.^all.map(*.name ~= "!").save;
+is TestPhasers.^all.map(*.int), (1);
+is TestPhasers.^all.map(*.name), ("test two!");
 
 done-testing;
 
